don't use ScDrawLayer::GetObjDataTab to get Anchor fix for fdo#59325

Seems ScDrawLayer::GetObjDataTab was used mistakenly thinking that only an anchor
for that tab would be returned ( but actually whatever anchor is returned gets the
tab set )

Change-Id: I5d240f80a9974f6e4032875ed00350c94621bde7
Reviewed-on: https://gerrit.libreoffice.org/1828
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>